iptables
# Generated by iptables-save v1.4.16.3 on 
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:IPSEC - [0:0]
:PHP_APPS - [0:0]
:PHP_CPTPRT - [0:0]
:VIRTSVR_HAIRPIN_DNAT_ppp0.1 - [0:0]
:VIRTSVR_HAIRPIN_SNAT_ppp0.1 - [0:0]
-A PREROUTING -i br0 -j PHP_APPS
-A PREROUTING -i ppp0.1 -p tcp -m tcp --dport 30005 -j ACCEPT
-A PREROUTING -i ppp0.1 -p udp -m udp --dport 30007 -j ACCEPT
-A PREROUTING -j VIRTSVR_HAIRPIN_DNAT_ppp0.1
-A POSTROUTING -j IPSEC
-A POSTROUTING -s 192.168.1.0/24 -o ppp0.1 -j MASQUERADE
-A POSTROUTING -j VIRTSVR_HAIRPIN_SNAT_ppp0.1
-A PHP_APPS -d 255.255.255.255/32 -j RETURN
-A PHP_APPS -d 192.168.1.1/32 -j RETURN
-A PHP_APPS -p tcp -m tcp --dport 80 -j PHP_CPTPRT
-A PHP_APPS -j RETURN
COMMIT
# Completed on
# Generated by iptables-save v1.4.16.3 on
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i ppp0.1 -p esp -j MARK --set-xmark 0x10000000/0xffffffff
-A PREROUTING -i ppp0.1 -p ah -j MARK --set-xmark 0x10000000/0xffffffff
-A FORWARD -i ppp0.1 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -o ppp0.1 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p udp -m udp --dport 53 -j MARK --set-xmark 0x7/0x7
-A OUTPUT -p 2 -j MARK --set-xmark 0x7/0x7
-A OUTPUT -p udp -m udp --sport 161 -j MARK --set-xmark 0x7/0x7
-A OUTPUT -p udp -m udp --sport 520 -j MARK --set-xmark 0x7/0x7
-A OUTPUT -p udp -m udp --dport 67:68 -j MARK --set-xmark 0x7/0x7
-A OUTPUT -p tcp -m tcp --sport 30005 -j MARK --set-xmark 0x7/0x7
COMMIT
# Completed on
# Generated by iptables-save v1.4.16.3 on
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:ACLSRVC - [0:0]
:COUNT_ONLY - [0:0]
:SEC_INCOMING - [0:0]
:TENANT_FORWARD - [0:0]
:TENANT_INPUT - [0:0]
:TENANT_OUTPUT - [0:0]
:VIRTSVR - [0:0]
-A INPUT -i ppp0.1 -m conntrack --ctstate INVALID -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -i br0 -j ACCEPT
-A INPUT -i ppp0.1 -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -i ppp0.1 -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -i ppp0.1 -p tcp -m tcp --dport 7547 -j COUNT_ONLY
-A INPUT -i ppp0.1 -p tcp -m tcp --dport 30005 -j DROP
-A INPUT -i ppp0.1 -p udp -m udp --dport 30007 -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i ppp0.1 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 6/hour -j NFLOG --nflog-prefix  "Intrusion -> " --nflog-group 16
-A INPUT -j DROP
-A FORWARD -j TENANT_FORWARD
-A FORWARD -j SEC_INCOMING
-A FORWARD -j VIRTSVR
-A FORWARD -i ppp0.1 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ppp0.1 ! -p esp -m mark --mark 0x10000000/0x10000000 -j ACCEPT
-A FORWARD -i ppp0.1 ! -p ah -m mark --mark 0x10000000/0x10000000 -j ACCEPT
-A FORWARD -i ppp0.1 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 6/hour -j NFLOG --nflog-prefix  "Intrusion -> " --nflog-group 16 
-A FORWARD -i ppp0.1 -j DROP
-A OUTPUT -p icmp -m icmp --icmp-type 3/4 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 3 -j DROP
-A OUTPUT -j TENANT_OUTPUT
-A TENANT_FORWARD -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A TENANT_FORWARD -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A TENANT_FORWARD -i ppp0.1 -m conntrack --ctstate INVALID -j DROP
-A TENANT_FORWARD -i ppp0.1 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A TENANT_FORWARD -s 192.168.1.0/25 -i br0 -o ppp0.1 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A TENANT_FORWARD -s 192.168.1.128/25 -o ppp0.1 -j DROP
-A TENANT_FORWARD -j DROP
COMMIT
# Completed on
